# rx1

leap_hand/: .setup_assistant  CMakeLists.txt  package.xml
leap_hand/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  leap_hand_control.yaml  ompl_planning.yaml  onshape.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
leap_hand/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
leap_hand/scripts/: get_position.py  leap_ik.py
rx1_bringup/: package.xml
rx1_bringup/config/: network.yaml
rx1_bringup/launch/: rosbridge.launch
rx1_bringup/scripts/: ros_zmq_bridge_rviz.py  (+1 more)
rx1_gazebo/: CMakeLists.txt  package.xml
rx1_gazebo/config/: rx1_control_gazebo.yaml
rx1_gazebo/launch/: clean_launch.py  ik_to_arm.launch  rx1_gazebo.launch  zmq_bridge.launch  zmq_bridge_system.launch
rx1_gazebo/scripts/: check_chain.py  check_ports.py  ik_to_arm.py  ros_zmq_bridge.py  test_controller.py  zmq_debug_subscriber.py
rx1_ik/: frames.gv
rx1_ik_moveit/: .setup_assistant  CMakeLists.txt  package.xml
tests/: get_cart.py  test_extract_joints.py  test_gripper_pose_pub.py  test_ik.py  test_ik_to_arm.py  test_moveit_control.py  test_pipeline.py  test_rviz.py
(+57 files in other folders)
